--- a/expenses.html
+++ b/expenses.html
@@ -1,136 +1,131 @@
 <html>
+
 <body bgcolor="#E6E6FH">
-<head>
-  <title>Expenses | Home Finance App</title>
-  <meta charset="utf-8">
 
-<style>
-    /* Dropdown Button */
+    <head>
+        <title>Expenses | Home Finance App</title>
+        <meta charset="utf-8">
 
-    .dropbtn {
-        background-color: #4CAF50;
-        color: white;
-        padding: 16px;
-        font-size: 16px;
-        border: none;
-    }
+        <style>
+            body {
+                font-family: "Lato", sans-serif;
+            }
 
-    .dropdown {
-        position: relative;
-        display: inline-block;
-    }
+            .sidenav {
+                height: 100%;
+                width: 200px;
+                position: fixed;
+                z-index: 1;
+                top: 0;
+                left: 0;
+                background-color: #111;
+                overflow-x: hidden;
+                padding-top: 20px;
+            }
 
-    .dropdown-content {
-        display: none;
-        position: absolute;
-        background-color: #f1f1f1;
-        min-width: 160px;
-        box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-        z-index: 1;
-    }
+            .sidenav a {
+                padding: 6px 6px 6px 32px;
+                text-decoration: none;
+                font-size: 20px;
+                color: #818181;
+                display: block;
+            }
 
-    .dropdown-content a {
-        color: black;
-        padding: 12px 16px;
-        text-decoration: none;
-        display: block;
-    }
+            .sidenav a:hover {
+                color: #f1f1f1;
+            }
 
-    .dropdown-content a:hover {
-        background-color: #ddd
-    }
+            .main {
+                margin-left: 200px;
+                /* Same as the width of the sidenav */
+            }
 
-    .dropdown:hover .dropdown-content {
-        display: block;
-    }
+            @media screen and (max-height: 450px) {
+                .sidenav {
+                    padding-top: 15px;
+                }
+                .sidenav a {
+                    font-size: 18px;
+                }
+            }
 
-    .dropdown:hover .dropbtn {
-        background-color: #3e8e41;
-    }
+            label {
+                width: 180px;
+                clear: left;
+                text-align: left;
+                padding-right: 10px;
+            }
 
-    /*End menu*/
+            input,
+            label {
+                float: left;
+            }
 
-    label {
-        width: 180px;
-        clear: left;
-        text-align: left;
-        padding-right: 10px;
-    }
+            .block {
+                display: block;
+                width: 20%;
+                border: none;
+                background-color: #4CAF50;
+                color: white;
+                padding: 10px 20px;
+                font-size: 16px;
+                cursor: pointer;
+                text-align: center;
+            }
 
-    input,
-    label {
-        float: left;
-    }
+            .block:hover {
+                background-color: #ddd;
+                color: black;
+            }
+        </style>
 
-    .block {
-        display: block;
-        width: 20%;
-        border: none;
-        background-color: #4CAF50;
-        color: white;
-        padding: 10px 20px;
-        font-size: 16px;
-        cursor: pointer;
-        text-align: center;
-    }
-
-    .block:hover {
-        background-color: #ddd;
-        color: black;
-    }
-</style>
-
-<body>
-    <div class="dropdown">
-        <button class="dropbtn">Menu</button>
-        <div class="dropdown-content">
-            <a href="index.html">Home</a>
-            <a href="income.html">Income</a>
-            <a href="savings.html">Savings</a>
-            <a href="expenses.html">Expenses</a>
-            <a href="taxDeductions.html">Tax Deductions</a>
-            <a href="taxChart.html">Tax Chart</a>
-            <a href="notifications.html">Notifications</a>
-            <a href="security.html">Security</a>
-            <a href="about_us.html">About Us</a>
-            <a href="signOut.html">Sign Out</a>
-
-        </div>
-    </div>
-    <center>
-        <h1> Expenses
-            <br>
-        </h1>
-    </center>
-    <center>
-        <form>
-            <label for="Utilities">Utilities</label>
-            <input id="Utilities" name="Utilities">
-            <input type="submit" value="Submit">
-            <input type="checkbox" name="Tax" value="Tax Deductable"> Tax Deductable
-            <br>
-            <br>
-            <label for="Mortgage/Rent">Mortgage/Rent</label>
-            <input id="Mortgage/Rent" name="Mortgage/Rent">
-            <input type="submit" value="Submit">
-            <input type="checkbox" name="Tax" value="Tax Deductable"> Tax Deductable
-            <br>
-            <br>
-            <label for="CreditPayments">Credit Payments</label>
-            <input id="CreditPayments" name="CreditPayments">
-            <input type="submit" value="Submit">
-            <input type="checkbox" name="Tax" value="Tax Deductable"> Tax Deductable
-            <br>
-            <br>
-            <label for="Miscellaneous">Miscellaneous</label>
-            <input id="Miscellaneous" name="Miscellaneous">
-            <input type="submit" value="Submit">
-            <input type="checkbox" name="Tax" value="Tax Deductable"> Tax Deductable
-            <br>
-            <br>
-            <button class="block" onclick="alert('Currently under production')">Add Additional Expenses</button>
-        </form>
-    </center>
-</body>
+        <body>
+            <div class="sidenav">
+                <a href="index.html">Home</a>
+                <a href="income.html">Income</a>
+                <a href="savings.html">Savings</a>
+                <a href="expenses.html">Expenses</a>
+                <a href="taxDeductions.html">Tax Deductions</a>
+                <a href="taxChart.html">Tax Chart</a>
+                <a href="notifications.html">Notifications</a>
+                <a href="security.html">Security</a>
+                <a href="signOut.html">Sign Out</a>
+            </div>
+            <div class="main">
+                <center>
+                    <h1> Expenses
+                        <br>
+                    </h1>
+                </center>
+                <center>
+                    <form>
+                        <label for="Utilities">Utilities</label>
+                        <input id="Utilities" name="Utilities">
+                        <input type="submit" value="Submit">
+                        <input type="checkbox" name="Tax" value="Tax Deductable"> Tax Deductable
+                        <br>
+                        <br>
+                        <label for="Mortgage/Rent">Mortgage/Rent</label>
+                        <input id="Mortgage/Rent" name="Mortgage/Rent">
+                        <input type="submit" value="Submit">
+                        <input type="checkbox" name="Tax" value="Tax Deductable"> Tax Deductable
+                        <br>
+                        <br>
+                        <label for="CreditPayments">Credit Payments</label>
+                        <input id="CreditPayments" name="CreditPayments">
+                        <input type="submit" value="Submit">
+                        <input type="checkbox" name="Tax" value="Tax Deductable"> Tax Deductable
+                        <br>
+                        <br>
+                        <label for="Miscellaneous">Miscellaneous</label>
+                        <input id="Miscellaneous" name="Miscellaneous">
+                        <input type="submit" value="Submit">
+                        <input type="checkbox" name="Tax" value="Tax Deductable"> Tax Deductable
+                        <br>
+                        <br>
+                        <button class="block" onclick="alert('Currently under production')">Add Additional Expenses</button>
+                    </form>
+                </center>
+        </body>
 
 </html>
