--- a/notifications.html
+++ b/notifications.html
@@ -10,50 +10,47 @@
 
 
         <style>
-            /* Dropdown Button */
-
-            .dropbtn {
-                background-color: #4CAF50;
-                color: white;
-                padding: 16px;
-                font-size: 16px;
-                border: none;
+            body {
+                font-family: "Lato", sans-serif;
             }
 
-            .dropdown {
-                position: relative;
-                display: inline-block;
-            }
-
-            .dropdown-content {
-                display: none;
-                position: absolute;
-                background-color: #f1f1f1;
-                min-width: 160px;
-                box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+            .sidenav {
+                height: 100%;
+                width: 200px;
+                position: fixed;
                 z-index: 1;
+                top: 0;
+                left: 0;
+                background-color: #111;
+                overflow-x: hidden;
+                padding-top: 20px;
             }
 
-            .dropdown-content a {
-                color: black;
-                padding: 12px 16px;
+            .sidenav a {
+                padding: 6px 6px 6px 32px;
                 text-decoration: none;
+                font-size: 20px;
+                color: #818181;
                 display: block;
             }
 
-            .dropdown-content a:hover {
-                background-color: #ddd
+            .sidenav a:hover {
+                color: #f1f1f1;
             }
 
-            .dropdown:hover .dropdown-content {
-                display: block;
+            .main {
+                margin-left: 200px;
+                /* Same as the width of the sidenav */
             }
 
-            .dropdown:hover .dropbtn {
-                background-color: #3e8e41;
+            @media screen and (max-height: 450px) {
+                .sidenav {
+                    padding-top: 15px;
+                }
+                .sidenav a {
+                    font-size: 18px;
+                }
             }
-
-            /*End menu*/
 
             .button {
                 background-color: #4CAF50;
@@ -142,60 +139,55 @@
     </head>
 
     <body>
-        <div class="dropdown">
-            <button class="dropbtn">Menu</button>
-            <div class="dropdown-content">
-                <a href="index.html">Home</a>
-                <a href="income.html">Income</a>
-                <a href="savings.html">Savings</a>
-                <a href="expenses.html">Expenses</a>
-                <a href="taxDeductions.html">Tax Deductions</a>
-                <a href="taxChart.html">Tax Chart</a>
-                <a href="notifications.html">Notifications</a>
-                <a href="security.html">Security</a>
-                <a href="about_us.html">About Us</a>
-                <a href="signOut.html">Sign Out</a>
+        <div class="sidenav">
+            <a href="index.html">Home</a>
+            <a href="income.html">Income</a>
+            <a href="savings.html">Savings</a>
+            <a href="expenses.html">Expenses</a>
+            <a href="taxDeductions.html">Tax Deductions</a>
+            <a href="taxChart.html">Tax Chart</a>
+            <a href="notifications.html">Notifications</a>
+            <a href="security.html">Security</a>
+            <a href="signOut.html">Sign Out</a>
+        </div>
+        <div class="main">
+            <center>
+                <h1> Notifications
+                    <br>
+                </h1>
+            </center>
+            <hr>
 
+            <center>
+                <br>
+                <button class="button button1">
+                    <left>Cable </left> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    Past Due</button>
+                <br>
+                <button class="button button2">
+                    <left>Electr</left> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    Past Due</button>
+                <br>
+                <button class="button button3">
+                    <left>WaterB</left> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    10 Days</button>
+                <br>
+                <button class="button button4">
+                    <left>Car No </left> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    13 Days</button>
+                <br>
+                <button class="button button5">
+                    <left>Bill </left> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    Date Paid</button>
+                <br>
+                <button class="button button6">
+                    <left>Bill </left> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    Date Paid</button>
+            </center>
+
+
+            <div class="w3-container">
+                <button class="w3-button w3-xlarge w3-circle w3-red w3-card-4">+</button>
             </div>
         </div>
-
-        <center>
-            <h1> Notifications
-                <br>
-            </h1>
-        </center>
-        <hr>
-
-        <center>
-            <br>
-            <button class="button button1">
-                <left>Cable </left> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                Past Due</button>
-            <br>
-            <button class="button button2">
-                <left>Electr</left> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                Past Due</button>
-            <br>
-            <button class="button button3">
-                <left>WaterB</left> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                10 Days</button>
-            <br>
-            <button class="button button4">
-                <left>Car No </left> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                13 Days</button>
-            <br>
-            <button class="button button5">
-                <left>Bill </left> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                Date Paid</button>
-            <br>
-            <button class="button button6">
-                <left>Bill </left> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                Date Paid</button>
-        </center>
-
-
-        <div class="w3-container">
-            <button class="w3-button w3-xlarge w3-circle w3-red w3-card-4">+</button>
-        </div>
-
     </body>
