--- a/FinanceTreeAngular/src/savings.html
+++ b/FinanceTreeAngular/src/savings.html
@@ -68,7 +68,7 @@
       <a href="notifications.html">Notifications</a>
       <a href="security.html">Security</a>
       <a href="about_us.html">About Us</a>
-      <a href="Help.html">Help</a>
+      <a href="help.html">Help</a>
       <a href="signOut.html">Sign Out</a>
 		</div>
 
